// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anchor Default Anchor 1`] = `
.c2 {
  background-color: transparent;
  -webkit-text-decoration-skip: objects;
  text-decoration-skip: objects;
}

.c1 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
}

.c0 {
  color: rgb(59,70,204);
  -webkit-text-fill-color: currentcolor;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
  className="c0 c1 c2"
  href="https://joyent.com"
>
  Inspire the lazy
</a>
`;

exports[`Anchor Disabled Anchor 1`] = `
.c2 {
  background-color: transparent;
  -webkit-text-decoration-skip: objects;
  text-decoration-skip: objects;
}

.c1 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
}

.c0 {
  color: rgb(59,70,204);
  -webkit-text-fill-color: currentcolor;
  color: rgb(216,216,216);
  -webkit-text-fill-color: currentcolor;
  pointer-events: none;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<a
  className="c0 c1 c2"
  disabled={true}
  href="https://joyent.com"
>
  Inspire the lazy
</a>
`;

exports[`Anchor Reversed Anchor 1`] = `
.c2 {
  background-color: transparent;
  -webkit-text-decoration-skip: objects;
  text-decoration-skip: objects;
}

.c1 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
}

.c0 {
  color: rgb(59,70,204);
  -webkit-text-fill-color: currentcolor;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
  className="c0 c1 c2"
  href="https://joyent.com"
  reversed={true}
>
  Inspire the lazy
</a>
`;
